Se agregan dtos
